make client server separate jar for desktop application